--- a/spring-jwt/src/main/resources/application.yml
+++ b/spring-jwt/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-spring:
+Spring:
   datasource:
-    url: url="jdbc:mariadb://localhost:3306/user_jwt"
+    url: jdbc:mariadb://localhost:3306/user_jwt
     username: root
     password: jvman19
     driver-class-name: org.mariadb.jdbc.Driver
